--- a/Game.html
+++ b/Game.html
@@ -3,6 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Simple Canvas Game</title>
+		<style>
+			canvas {
+				display: block;
+			}
+			body {
+				margin: 0;
+			}
+		</style>
 	</head>
 	<body>
 		<script src="Bundle.js"></script>
